--- a/tests/notebooks/tests/test_api_summarization.ipynb
+++ b/tests/notebooks/tests/test_api_summarization.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In a paper published by the Google Brain and the Deep Mind units of Google, researchers address shortcomings of the field and offer some techniques they hope will bring machine learning farther along the path to what would be \"artificial general intelligence,\" something more like human reasoning.\n"
+      "Prime Minister Benjamin Netanyahu on Sunday warned Hamas that Israel will continue to operate against the terrorism stemming from the Gaza Strip, apparently confirming that no official ceasefire agreement had been reached with the terrorist group.\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "file = '../../docs/text4'\n",
+    "file = '../../docs/text6'\n",
     "with open(file, 'r') as f:\n",
     "    text = f.read()\n",
     "    data = {'text': text, 'word_count': 50}\n",
@@ -29,90 +29,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Critics of the current mode of artificial intelligence technology have grown louder in the last couple of years, and this week, Google, one of the biggest commercial beneficiaries of the current vogue, offered a response, if, perhaps, not an answer, to the critics.\n",
+      "Netanyahu: Israel won’t accept anything less than a full ceasefire in Gaza\n",
+      "Hamas has paid a heavy price in recent hostilities, Israel has operational plans ready, prime minister says\n",
+      "By TOI STAFF\n",
+      "12 August 2018, 1:48 pm  7\n",
+      "941\n",
+      "shares\n",
+      "Prime Minister Benjamin Netanyahu addresses the weekly cabinet meeting in his Jerusalem office, August 12, 2018. (Jim Hollander/Pool via AP)\n",
+      "Prime Minister Benjamin Netanyahu addresses the weekly cabinet meeting in his Jerusalem office, August 12, 2018. (Jim Hollander/Pool via AP)\n",
+      "Prime Minister Benjamin Netanyahu on Sunday warned Hamas that Israel will continue to operate against the terrorism stemming from the Gaza Strip, apparently confirming that no official ceasefire agreement had been reached with the terrorist group.\n",
       "\n",
-      "In a paper published by the Google Brain and the Deep Mind units of Google, researchers address shortcomings of the field and offer some techniques they hope will bring machine learning farther along the path to what would be \"artificial general intelligence,\" something more like human reasoning.\n",
-      "\n",
-      "The research acknowledges that current \"deep learning\" approaches to AI have failed to achieve the ability to even approach human cognitive skills. Without dumping all that's been achieved with things such as \"convolutional neural networks,\" or CNNs, the shining success of machine learning, they propose ways to impart broader reasoning skills.\n",
-      "\n",
-      "Also: Google Brain, Microsoft plumb the mysteries of networks with AI\n",
-      "\n",
-      "The paper, \"Relational inductive biases, deep learning, and graph networks,\" posted on the arXiv pre-print service, is authored by Peter W. Battaglia of Google's DeepMind unit, along with colleagues from Google Brain, MIT, and the University of Edinburgh. It proposes the use of network \"graphs\" as a means to better generalize from one instance of a problem to another.\n",
-      "\n",
-      "Battaglia and colleagues, calling their work \"part position paper, part review, and part unification,\" observe that AI \"has undergone a renaissance recently,\" thanks to \"cheap data and cheap compute resources.\"\n",
-      "\n",
-      "However, \"many defining characteristics of human intelligence, which developed under much different pressures, remain out of reach for current approaches,\" especially \"generalizing beyond one's experiences.\"\n",
+      "“We are in the midst of a campaign against terror in Gaza. It entails an exchange of blows; it will not end in one strike. Our demand is clear – a complete ceasefire. We will not suffice with less than this,” said Netanyahu.\n",
       "\n",
       "\n",
-      "Workday HCM vs. Dayforce vs. Oracle HCM\n",
+      "Speaking at the opening of the weekly cabinet meeting, the prime minister added said Israel wouldn’t rest until security was restored in full for the residents of southern Israel.\n",
       "\n",
-      "Find out which of these top human capital management (HCM) systems is best for your needs. Get the pros and cons for each across 20 key business and functional requirements.\n",
+      "Get The Times of Israel's Daily Edition by email and never miss our top stories FREE SIGN UP\n",
+      "“As of now, we have destroyed hundreds of Hamas military targets, and in each round the IDF exacts an additional heavy price. I will not reveal our operational plans here; they are ready,” Netanyahu said. “Our objective is to restore the quiet to residents of the south and the area adjacent to the Gaza Strip. This goal will be achieved in full.”\n",
       "\n",
-      "Get recommendations, selection tools and software pricing based on your specific needs. More than 160 HRIS system evaluations are available.\n",
       "\n",
-      "Downloads provided by Select Hub\n",
-      "Hence, \"A vast gap between human and machine intelligence remains, especially with respect to efficient, generalizable learning.\"\n",
+      "A plume of smoke rises from the remains of a building west of Gaza City that was targeted by the Israeli Air Force in response to a rocket attack that hit southern Israel earlier in the day on August 9, 2018. (Mahmud Hams/AFP)\n",
+      "Senior Israel officials maintain the country has not agreed to the ceasefire which Hamas announced late Thursday and said went into effect at midnight. Hamas claims the deal was mediated by Egypt and other regional players.\n",
       "\n",
-      "The authors cite some prominent critics of AI, such as NYU professor Gary Marcus.\n",
+      "The apparent truce came after two days of spiraling violence that saw the heaviest exchanges of fire between Israel and the Gaza terrorist organization since 2014’s Operation Protective Edge.\n",
       "\n",
-      "In response, they argue for \"blending powerful deep learning approaches with structured representations,\" and their solution is something called a \"graph network.\" These are models of collections of objects, or entities, whose relationships are explicitly mapped out as \"edges\" connecting the objects.\n",
+      "Energy Minister Yuval Steinitz said earlier on Sunday that Israel could overthrow Hamas, as a report indicated that Israel was mulling assassinating the leaders of the terrorist group that rules the Gaza Strip.\n",
       "\n",
-      "\"Human cognition makes the strong assumption that the world is composed of objects and relations,\" they write, \"and because GNs [graph networks] make a similar assumption, their behavior tends to be more interpretable.\"\n",
+      "“Toppling Hamas is an option, and we are closer to it than ever,” the Likud minister told the Kan public broadcaster.\n",
       "\n",
-      "Also: Google Next 2018: A deeper dive on AI and machine learning advances\n",
       "\n",
-      "The paper explicitly draws upon work for more than a decade now on \"graph neural networks.\" It also echoes some of the recent interest by the Google Brain folks in using neural nets to figure out network structure.\n",
+      "Energy Minister Yuval Steinitz attends a plenum session at the Knesset in Jerusalem,\n",
+      "May 23, 2018. (Yonatan Sindel/Flash90)\n",
+      "Steinitz, a member of the high-level security cabinet, also maintained that Israel has not signed a ceasefire with the terrorist group.\n",
       "\n",
-      "But unlike that prior work, the authors make the surprising assertion that their work doesn't need to use neural networks, per se.\n",
+      "“The last round [of fighting] severely harmed the production of missiles and drones. We as a [security] cabinet should see the general picture – we have not signed a truce agreement and we are keeping our cards close to our chest,” he said.\n",
       "\n",
-      "Rather, modeling the relationships of objects is something that not only spans all the various machine learning models -- CNNs, recurrent neural networks (RNNs), long-short-term memory (LSTM) systems, etc. -- but also other approaches that are not neural nets, such as set theory.\n",
+      "Steinitz also addressed criticism that Israel had capitulated by allowing the apparent ceasefire to go into effect without demanding full security for the residents of communities surrounding the enclave, and the return of the bodies of soldiers Hadar Goldin and Oron Shaul, killed during the 2014 Gaza war, and the two civilians Avera Mengistu and Hisham al-Sayed, who are also believed to be held in the Strip.\n",
       "\n",
-      "image.jpg\n",
-      "The Google AI researchers reason that many things one would like to be able to reason about broadly -- particles, sentences, objects in an image -- come down to graphs of relationships among entities.\n",
+      "“We do not have to go to war every time they hit us,” Steinitz said. “Sometimes we will embark on military campaigns, or forceful responses.”\n",
       "\n",
-      "Google Brain, Deep Mind, MIT, University of Edinburgh.\n",
-      "The idea is that graph networks are bigger than any one machine-learning approach. Graphs bring an ability to generalize about structure that the individual neural nets don't have.\n",
       "\n",
-      "The authors write, \"Graphs, generally, are a representation which supports arbitrary (pairwise) relational structure, and computations over graphs afford a strong relational inductive bias beyond that which convolutional and recurrent layers can provide.\"\n",
+      "The site where a projectile from the Gaza Strip hit a house in the Eshkol region of southern Israel, injuring two people, on August 9, 2018. (Eshkol Security)\n",
+      "Steinitz’s comments came as the Haaretz daily reported on Sunday that Israel has formulated a plan to assassinate members of the senior Hamas leadership, but is waiting to see the outcome of the Egypt and UN-brokered negotiations before implementing it.\n",
       "\n",
-      "A benefit of the graphs would also appear to be that they're potentially more \"sample efficient,\" meaning, they don't require as much raw data as strict neural net approaches.\n",
+      "Defense sources told the newspaper that it is believed that assassinations are preferable to a wide-scale ground offensive in Gaza, while acknowledging that targeted killings could lead to the start of a military campaign.\n",
       "\n",
-      "To let you try it out at home, the authors this week offered up a software toolkit for graph networks, to be used with Google's TensorFlow AI framework, posted on Github.\n",
       "\n",
-      "Also: Google preps TPU 3.0 for AI, machine learning, model training\n",
+      "Mazen Faqha upon his release after the Gilad Shalit deal in 2011. (Screen capture: Twitter)\n",
+      "The newspaper noted that the killing of Hamas official Mazen Faqha last March, in a shooting attributed to Israel but for which it has not claimed responsibility, spread widespread tension and disruption in Gaza as factions fought over areas previously controlled by Faqha.\n",
       "\n",
-      "Lest you think the authors think they've got it all figured out, the paper lists some lingering shortcomings. Battaglia & Co. pose the big question, \"Where do the graphs come from that graph networks operate over?\"\n",
+      "Sources also told the paper that the Israeli defense establishment hopes to delay any broad conflict until at least the end of 2019, when construction of a technological above- and below-ground barrier along the Gaza border will be completed.\n",
       "\n",
-      "Deep learning, they note, just absorbs lots of unstructured data, such as raw pixel information. That data may not correspond to any particular entities in the world. So they conclude that it's going to be an \"exciting challenge\" to find a method that \"can reliably extract discrete entities from sensory data.\"\n",
       "\n",
-      "They also concede that graphs are not able to express everything: \"notions like recursion, control flow, and conditional iteration are not straightforward to represent with graphs, and, minimally, require additional assumptions.\"\n",
+      " \n",
+      "Senior Israeli officials have said that “quiet will be met by quiet,” implying that the country is not seeking an escalation of violence, but has not openly committed to an end to hostilities. Instead, military officials hope the terror group has internalized the damage Israel can cause to its infrastructure.\n",
       "\n",
-      "Other structural forms might be needed, such as, perhaps, imitations of computer-based structures, including \"registers, memory I/O controllers, stacks, queues\" and others.\n",
+      "“Hamas understands very well what it has lost in the past few months; it can’t ignore it,” a senior IDF officer told the newspaper.\n",
       "\n",
-      "PREVIOUS AND RELATED COVERAGE:\n",
-      "What is AI? Everything you need to know\n",
+      "Despite the apparent truce and reprieve in rocket fire, violence has continued on the border, and Israeli tanks struck two Hamas posts in the Gaza Strip Friday evening after a grenade was hurled at troops and amid intense violence during mass riots in several locations along the border.\n",
       "\n",
-      "An executive guide to artificial intelligence, from machine learning and general AI to neural networks.\n",
       "\n",
-      "What is deep learning? Everything you need to know\n",
+      "A Palestinian protester holds a slingshot during a demonstration at the Israel-Gaza border, in Khan Younis in the southern Gaza Strip on August 10, 2018. (AFP PHOTO / Said KHATIB)\n",
+      "Around 9,000 Palestinians participated Friday in violent weekly border protests. Some protesters rioted near the fence, threw makeshift bombs, Molotov cocktails and rocks at Israeli soldiers, and burned tires to create a smokescreen. In one incident a grenade was thrown at Israeli troops, but caused no casualties. Several attempts were made to breach the security fence.\n",
       "\n",
-      "The lowdown on deep learning: from how it relates to the wider field of machine learning through to how to get started with it.\n",
+      "The Hamas-run Gaza health ministry said three Palestinians were killed in Friday’s violence.\n",
       "\n",
-      "What is machine learning? Everything you need to know\n",
       "\n",
-      "This guide explains what machine learning is, how it is related to artificial intelligence, how it works and why it matters.\n",
+      "A large incendiary kite launched from Gaza lands on power lines near Kibbutz Sufa, August 11, 2018. Photo: Israel Electric Corporation\n",
+      "Meanwhile, incendiary kites and balloons from Gaza have continued to plague Israeli border communities, with a large incendiary kite landing on power lines near Kibbutz Sufa on Friday, causing blackouts in surrounding homes.\n",
       "\n",
-      "What is cloud computing? Everything you need to know about\n",
+      "On Saturday afternoon the IDF said it targeted a cell responsible for launching incendiary balloons in the northern Gaza Strip. Reports in Palestinian media said two people were injured in the Israeli strikes in El-Bureij.There were also Palestinian reports of a second IDF strike elsewhere in the Gaza Strip.\n",
       "\n",
-      "An introduction to cloud computing right from the basics up to IaaS and PaaS, hybrid, public, and private cloud.\n",
+      "Southern Israel has experienced hundreds of fires as a result of incendiary kites and balloons flown over the border from Gaza in recent months. Over 7,000 acres of land have been burned, causing millions of shekels in damages, according to Israeli officials.\n",
       "\n",
+      "Since March, there have been near-weekly, violent protests along the Israel-Gaza border organized by Gaza’s Hamas rulers, leading to the most serious escalation between the two sides since the 2014 war.\n",
+      "\n",
+      "The deadly clashes have seen Israeli security forces facing gunfire, grenades, Molotov cocktails, and efforts — sometimes successful — to damage or penetrate the border fence. Last month, an Israeli soldier was killed by a sniper.\n",
+      "\n",
+      "\n",
+      " \n",
+      "Over 100 Palestinians have been killed since the start of the “March of Return” protests on March 30. Hamas has acknowledged that dozens of those killed were its members.\n",
       "\n"
      ]
     }
