--- a/tests/notebooks/tests/test_api_nlp.ipynb
+++ b/tests/notebooks/tests/test_api_nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,6 @@
      "text": [
       "{\n",
       "    \"entities\": [],\n",
-      "    \"text\": \"\",\n",
       "    \"relations\": [\n",
       "        [\n",
       "            \"Minister Yuval Steinitz\",\n",
@@ -61,7 +60,8 @@
       "            \"Hamas\",\n",
       "            null\n",
       "        ]\n",
-      "    ]\n",
+      "    ],\n",
+      "    \"text\": \"\"\n",
       "}\n"
      ]
     }
@@ -75,7 +75,7 @@
     "    text = f.read()\n",
     "    data = {'text': text, 'model': 'en'}\n",
     "    headers = {'Content-type': 'application/json', 'Accept': 'text/plain'}\n",
-    "    url = 'http://localhost:5000/nlp'\n",
+    "    url = 'http://localhost:5000/nlp?relations'\n",
     "    res = requests.post(url, data=json.dumps(data), headers=headers)\n",
     "    print(res.text)"
    ]
