--- a/tests/notebooks/tests/wordcloud-masked.ipynb
+++ b/tests/notebooks/tests/wordcloud-masked.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "# Generate a word cloud image\n",
     "# (lower max_font_size, change the maximum number of word and lighten the background)\n",
-    "mask = np.array(Image.open('mask.png'))\n",
+    "mask = np.array(Image.open('images/mask.png'))\n",
     "wordcloud = WordCloud(\n",
     "#     max_font_size=50, \n",
     "    max_words=1000, \n",
