--- a/tests/notebooks/tests/topic_modeling.ipynb
+++ b/tests/notebooks/tests/topic_modeling.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Gensim LDA/LSI"
    ]
@@ -13,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the dataset\n",
+    "## Load LAPD newsgroups data\n",
     "prepare the dataset we’ll be working with.\n",
     "<br>(array of texts of news titles)\n"
    ]
@@ -21,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -31,11 +27,11 @@
      "text": [
       "data: 13956 documens\n",
       "(top 5)\n",
-      "Two Suspects Arrested in Home Invasion Robbery    NR17032ma \n",
-      "Suspect Arrested for Chinatown Murders    NR17033ml \n",
-      "Hit and Run Collision Leaves Pedestrian Dead    NR17033ne \n",
-      "Fatal Stabbing of a 27-year-old Man   NR17035im \n",
-      "Press Conference   NA17014ma\n"
+      "Newborn Baby Girl Found Dead Inside Home \n",
+      "Police Commission President John W. Mack's Comments on Tragic Use of Force Incident \n",
+      "Neighbor and Mother Detain Molester \n",
+      "Harbor Area Officers Seriously Injured by Drunk Driver \n",
+      "Prolific Car Thieves Nabbed in Koreatown\n"
      ]
     }
    ],
@@ -69,44 +65,274 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove emails and newline characters using regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(top 5)\n",
+      "Newborn Baby Girl Found Dead Inside Home \n",
+      "Police Commission President John W. Macks Comments on Tragic Use of Force Incident \n",
+      "Neighbor and Mother Detain Molester \n",
+      "Harbor Area Officers Seriously Injured by Drunk Driver \n",
+      "Prolific Car Thieves Nabbed in Koreatown\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def regex_clean(data):\n",
+    "    data_clean = data\n",
+    "    \n",
+    "    # Remove Emails\n",
+    "    data_clean = [re.sub('\\S*@\\S*\\s?', 'EMAIL', sent) for sent in data_clean]\n",
+    "\n",
+    "    # Remove new line characters\n",
+    "    data_clean = [re.sub('\\s+', ' ', sent) for sent in data_clean]\n",
+    "\n",
+    "    # Remove distracting single quotes\n",
+    "    data_clean = [re.sub(\"\\'\", \"\", sent) for sent in data_clean]\n",
+    "    \n",
+    "    return data_clean\n",
+    "\n",
+    "data = regex_clean(data)\n",
+    "print('(top 5)')\n",
+    "print(' \\n'.join(data[:5]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenize, lowercase and clean-up text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['newborn', 'baby', 'girl', 'found', 'dead', 'inside', 'home']\n",
+      "['police', 'commission', 'president', 'john', 'macks', 'comments', 'on', 'tragic', 'use', 'of', 'force', 'incident']\n",
+      "['neighbor', 'and', 'mother', 'detain', 'molester']\n",
+      "['harbor', 'area', 'officers', 'seriously', 'injured', 'by', 'drunk', 'driver']\n",
+      "['prolific', 'car', 'thieves', 'nabbed', 'in', 'koreatown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tokenize each sentence into a list of words, removing punctuations and unnecessary characters altogether.\n",
+    "# Gensim’s simple_preprocess() is great for this. Additionally set deacc=True to remove the punctuations.\n",
+    "\n",
+    "import gensim\n",
+    "from gensim.utils import simple_preprocess\n",
+    "\n",
+    "def tokenize(data):\n",
+    "    return [simple_preprocess(text, deacc=True) for text in data]\n",
+    "\n",
+    "data_words = tokenize(data)\n",
+    "\n",
+    "# print first 5 processed titles\n",
+    "for tokens in data_words[:5]:\n",
+    "    print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Bigram and Trigram Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yossi/dev/py/nlpy/env/lib/python3.5/site-packages/gensim/models/phrases.py:598: UserWarning: For a faster implementation, use the gensim.models.phrases.Phraser class\n",
+      "  warnings.warn(\"For a faster implementation, use the gensim.models.phrases.Phraser class\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['police_commission', 'president', 'john', 'macks', 'comments', 'on', 'tragic', 'use_of_force', 'incident']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bigrams are two words frequently occurring together in the document. \n",
+    "# Trigrams are 3 words frequently occurring.\n",
+    "# Some examples in our example are: ‘front_bumper’, ‘oil_leak’, ‘maryland_college_park’ etc.\n",
+    "\n",
+    "# Build the bigram and trigram models\n",
+    "bigram = gensim.models.Phrases(data_words, min_count=3, threshold=10) # higher threshold fewer phrases.\n",
+    "trigram = gensim.models.Phrases(bigram[data_words], threshold=100)  \n",
+    "\n",
+    "# Faster way to get a sentence clubbed as a trigram/bigram\n",
+    "bigram_mod = gensim.models.phrases.Phraser(bigram)\n",
+    "trigram_mod = gensim.models.phrases.Phraser(trigram)\n",
+    "\n",
+    "# See trigram example\n",
+    "print(trigram_mod[bigram_mod[data_words[1]]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Stopwords, Make Bigrams and Lemmatize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['newborn_baby', 'girl', 'found_dead', 'inside', 'home']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define functions for stopwords, bigrams, trigrams and lemmatization\n",
+    "\n",
+    "# NLTK Stop words\n",
+    "from nltk.corpus import stopwords\n",
+    "stop_words = stopwords.words('english')\n",
+    "stop_words.extend(['from', 'subject', 're', 'edu', 'use', 'on'])\n",
+    "\n",
+    "def remove_stopwords(data_words):\n",
+    "    return [[word for word in words if word not in stop_words] for words in data_words]\n",
+    "\n",
+    "def make_bigrams(data_words):\n",
+    "    return [bigram_mod[words] for words in data_words]\n",
+    "\n",
+    "def make_trigrams(data_words):\n",
+    "    return [trigram_mod[bigram_mod[words]] for words in data_words]\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "def pos_allowed(word):\n",
+    "    return get_pos(word) in ['n', 'r', 'v', 'j']\n",
+    "\n",
+    "def lemmatize(data_words):\n",
+    "    data_words_lemmatized = []\n",
+    "    for words in data_words:\n",
+    "        lemmatized = []\n",
+    "        for word in words:\n",
+    "#             pos = get_pos(word)\n",
+    "            lemmatized.append(word)\n",
+    "        data_words_lemmatized.append(lemmatized)\n",
+    "    return data_words_lemmatized\n",
+    "\n",
+    "# call the functions above in order.\n",
+    "def preprocess(data_words):\n",
+    "                                      \n",
+    "    # Remove Stop Words\n",
+    "    data_words_nostops = remove_stopwords(data_words)\n",
+    "\n",
+    "    # Form Bigrams\n",
+    "    data_words_trigrams = make_trigrams(data_words_nostops)\n",
+    "\n",
+    "    # Do lemmatization keeping only noun, adj, vb, adv\n",
+    "    data_lemmatized = lemmatize(data_words_trigrams)\n",
+    "    \n",
+    "    return data_lemmatized\n",
+    "\n",
+    "data_lemmatized = preprocess(data_words)\n",
+    "print(data_lemmatized[:1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the Dictionary and Corpus needed for Topic Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(0, 1), (1, 1), (2, 1), (3, 1), (4, 1)]]\n",
+      "\n",
+      "id2word[0]: found_dead\n",
+      "\n",
+      "[[('found_dead', 1), ('girl', 1), ('home', 1), ('inside', 1), ('newborn_baby', 1)], [('comments', 1), ('force', 1), ('incident', 1), ('john', 1), ('macks', 1), ('police_commission', 1), ('president', 1), ('tragic', 1)], [('detain', 1), ('molester', 1), ('mother', 1), ('neighbor', 1)], [('drunk_driver', 1), ('harbor_area', 1), ('officers', 1), ('seriously_injured', 1)], [('car', 1), ('koreatown', 1), ('nabbed', 1), ('prolific', 1), ('thieves', 1)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The two main inputs to the LDA topic model are the dictionary(id2word) and the corpus.\n",
+    "\n",
+    "from gensim import corpora\n",
+    "\n",
+    "# Create Dictionary\n",
+    "id2word = corpora.Dictionary(data_lemmatized)\n",
+    "\n",
+    "# Create Corpus\n",
+    "data_words = data_lemmatized\n",
+    "\n",
+    "# Term Document Frequency\n",
+    "corpus = [id2word.doc2bow(words) for words in data_words]\n",
+    "\n",
+    "# View\n",
+    "# Gensim creates a unique id for each word in the document. \n",
+    "# The produced corpus shown below is a mapping of (word_id, word_frequency).\n",
+    "# This is used as the input by the LDA model.\n",
+    "print(corpus[:1])\n",
+    "\n",
+    "# If you want to see what word a given id corresponds to, pass the id as a key to the dictionary.\n",
+    "print()\n",
+    "print('id2word[0]:', id2word[0])\n",
+    "\n",
+    "# Human readable format of corpus (term-frequency)\n",
+    "print()\n",
+    "print([[(id2word[id], freq) for id, freq in cp] for cp in corpus[:5]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO: Building the Topic Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# preprocess data for lad/lsi (tokenize and clean the data: stopwords, etc.)\n",
-    "\n",
-    "import re\n",
-    "import gensim\n",
-    "from gensim.utils import simple_preprocess\n",
-    "from gensim.parsing.preprocessing import STOPWORDS\n",
-    "from nltk.stem import WordNetLemmatizer, SnowballStemmer\n",
-    "\n",
-    "stemmer = SnowballStemmer('english')\n",
-    "\n",
-    "def lemmatize_stemming(text):\n",
-    "    return stemmer.stem(WordNetLemmatizer().lemmatize(text, pos='v'))\n",
-    "\n",
-    "def preprocess(text):\n",
-    "    result = []\n",
-    "    \n",
-    "    # simple_preprocess: lowercases, tokenizes, de-accents (optional). \n",
-    "    # deacc=True removes punctuations.\n",
-    "    for token in simple_preprocess(text, deacc=True, min_len=2, max_len=15):\n",
-    "        if (token not in STOPWORDS\n",
-    "            and len(token) > 3\n",
-    "            and re.match('[a-zA-Z\\-][a-zA-Z\\-]{2,}', token)):\n",
-    "            result.append(lemmatize_stemming(token))\n",
-    "    return result\n",
-    "\n",
-    "# preprocess data\n",
-    "processed_docs = []\n",
-    "for text in data:\n",
-    "    processed_docs.append(preprocess(text))\n",
-    "\n",
-    "# print first 5 processed titles\n",
-    "processed_docs[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -118,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create Gensim LDA and LSI models using BOW corpus.\n",
@@ -130,18 +354,18 @@
     "NUM_TOPICS = 30\n",
     "\n",
     "# Build a Dictionary - association word to numeric id\n",
-    "dictionary = corpora.Dictionary(processed_docs)\n",
+    "dictionary = corpora.Dictionary(data_words)\n",
     "\n",
     "# Gensim filter_extremes\n",
     "# dictionary.filter_extremes(no_below=15, no_above=0.5, keep_n=100000)\n",
     "\n",
     "# Transform the collection of texts to a numerical form\n",
-    "bow_corpus = [dictionary.doc2bow(text) for text in processed_docs]\n",
+    "bow_corpus = [dictionary.doc2bow(text) for text in data_words]\n",
     " \n",
     "# Have a look at how the 10th document looks like: [(word_id, count), ...]\n",
     "# e.g: [(12, 3), (14, 1), (21, 1), (25, 5), (30, 2), (31, 5), (33, 1), (42, 1), (43, 2),  ...\n",
     "doc_id = 10\n",
-    "print(processed_docs[doc_id])\n",
+    "print(data_words[doc_id])\n",
     "print(bow_corpus[doc_id])\n",
     "\n",
     "# Build the LDA model (Latent Dirichlet Allocation)\n",
@@ -177,9 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let’s now put the models to work and transform unseen documents to their topic distribution:\n",
@@ -253,7 +475,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Using Scikit-Learn for Topic Modeling"
    ]
@@ -261,7 +485,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import NMF, LatentDirichletAllocation, TruncatedSVD\n",
@@ -322,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def print_topics(model, vectorizer, top_n=6):\n",
@@ -350,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Transforming an unseen document\n",
@@ -368,7 +598,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Plotting words and documents in 2D with SVD"
    ]
@@ -376,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -389,7 +623,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# plot documents in 2D\n",
@@ -413,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# display words in 2D we just need to transpose the vectorized data: \n",
@@ -439,7 +677,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# lda\n",
@@ -494,7 +734,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import pyLDAvis.sklearn\n",
