--- a/tests/notebooks/tests/topic_modeling.ipynb
+++ b/tests/notebooks/tests/topic_modeling.ipynb
@@ -276,14 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[(0, 1), (1, 1), (2, 1), (3, 1), (4, 1)]]\n",
+      "['man', 'shot', 'killed', 'detectives_investigate']\n",
+      "[(31, 1), (34, 1), (35, 1), (38, 1)]\n",
       "\n",
       "id2word[0]: found_dead\n",
       "\n",
@@ -303,13 +304,15 @@
     "data_words = data_lemmatized\n",
     "\n",
     "# Term Document Frequency\n",
-    "corpus = [id2word.doc2bow(words) for words in data_words]\n",
+    "bow_corpus = [id2word.doc2bow(words) for words in data_words]\n",
     "\n",
     "# View\n",
     "# Gensim creates a unique id for each word in the document. \n",
     "# The produced corpus shown below is a mapping of (word_id, word_frequency).\n",
     "# This is used as the input by the LDA model.\n",
-    "print(corpus[:1])\n",
+    "doc_id = 10\n",
+    "print(data_words[doc_id])\n",
+    "print(bow_corpus[doc_id])\n",
     "\n",
     "# If you want to see what word a given id corresponds to, pass the id as a key to the dictionary.\n",
     "print()\n",
@@ -317,7 +320,7 @@
     "\n",
     "# Human readable format of corpus (term-frequency)\n",
     "print()\n",
-    "print([[(id2word[id], freq) for id, freq in cp] for cp in corpus[:5]])"
+    "print([[(id2word[id], freq) for id, freq in cp] for cp in bow_corpus[:5]])"
    ]
   },
   {
@@ -329,10 +332,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We have everything required to train the LDA model. \n",
+    "# In addition to the corpus and dictionary, you need to provide the number of topics as well.\n",
+    "# Apart from that, alpha and eta are hyperparameters that affect sparsity of the topics. \n",
+    "# According to the Gensim docs, both defaults to 1.0/num_topics prior.\n",
+    "# chunksize is the number of documents to be used in each training chunk. \n",
+    "# update_every determines how often the model parameters should be updated \n",
+    "# passes is the total number of training passes.\n",
+    "\n",
+    "# Build LDA model\n",
+    "NUM_TOPICS = 30\n",
+    "lda_model = gensim.models.LdaMulticore(corpus=corpus,\n",
+    "                                           id2word=id2word,\n",
+    "                                           num_topics=NUM_TOPICS, \n",
+    "                                           random_state=100,\n",
+    "                                           #update_every=1,\n",
+    "                                           chunksize=100,\n",
+    "                                           passes=10,\n",
+    "                                           #alpha='auto',\n",
+    "                                           per_word_topics=True)"
+   ]
   },
   {
    "cell_type": "markdown",
